# encstr

./: CMakeLists.txt  LICENSE  README.md
examples/: cbc-xor-unroll.cpp  cbc-xor.cpp  cbc-xtea-unroll.cpp  cbc-xtea.cpp  cfb-xor-unroll.cpp  cfb-xor.cpp  cfb-xtea-unroll.cpp  cfb-xtea.cpp  ecb-xor-unroll.cpp  ecb-xor.cpp  ecb-xtea-unroll.cpp  ecb-xtea.cpp
include/encstr/: cbc.hpp  cfb.hpp  ecb.hpp  string.hpp
include/encstr/ciphers/: xor_cipher.hpp  xtea_cipher.hpp
